# telotjek

./: LICENSE  README.md  all_telomere_reps.clean.cluster.fasta  all_telomere_reps.clean.fasta  pyproject.toml  telo_classes.fasta  telotjek.py
data/: all_telomere_reps.clean.cluster.fasta
